Update SDK for CMF v2.2.0 (#60)
