# v1/model_resource_information_status.go
@@ -1,0 +1,151 @@
+/*
+Confluent Manager for Apache Flink / CMF
+
+Apache Flink job lifecycle management component for Confluent Platform.
+
+API version: 1.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package v1
+
+import (
+	"encoding/json"
+)
+
+// ResourceInformationStatus struct for ResourceInformationStatus
+type ResourceInformationStatus struct {
+	Resources *Resources `json:"resources,omitempty"`
+	ResourceSummary *ResourceSummary `json:"resourceSummary,omitempty"`
+}
+
+// NewResourceInformationStatus instantiates a new ResourceInformationStatus object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewResourceInformationStatus() *ResourceInformationStatus {
+	this := ResourceInformationStatus{}
+	return &this
+}
+
+// NewResourceInformationStatusWithDefaults instantiates a new ResourceInformationStatus object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewResourceInformationStatusWithDefaults() *ResourceInformationStatus {
+	this := ResourceInformationStatus{}
+	return &this
+}
+
+// GetResources returns the Resources field value if set, zero value otherwise.
+func (o *ResourceInformationStatus) GetResources() Resources {
+	if o == nil || o.Resources == nil {
+		var ret Resources
+		return ret
+	}
+	return *o.Resources
+}
+
+// GetResourcesOk returns a tuple with the Resources field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ResourceInformationStatus) GetResourcesOk() (*Resources, bool) {
+	if o == nil || o.Resources == nil {
+		return nil, false
+	}
+	return o.Resources, true
+}
+
+// HasResources returns a boolean if a field has been set.
+func (o *ResourceInformationStatus) HasResources() bool {
+	if o != nil && o.Resources != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetResources gets a reference to the given Resources and assigns it to the Resources field.
+func (o *ResourceInformationStatus) SetResources(v Resources) {
+	o.Resources = &v
+}
+
+// GetResourceSummary returns the ResourceSummary field value if set, zero value otherwise.
+func (o *ResourceInformationStatus) GetResourceSummary() ResourceSummary {
+	if o == nil || o.ResourceSummary == nil {
+		var ret ResourceSummary
+		return ret
+	}
+	return *o.ResourceSummary
+}
+
+// GetResourceSummaryOk returns a tuple with the ResourceSummary field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ResourceInformationStatus) GetResourceSummaryOk() (*ResourceSummary, bool) {
+	if o == nil || o.ResourceSummary == nil {
+		return nil, false
+	}
+	return o.ResourceSummary, true
+}
+
+// HasResourceSummary returns a boolean if a field has been set.
+func (o *ResourceInformationStatus) HasResourceSummary() bool {
+	if o != nil && o.ResourceSummary != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetResourceSummary gets a reference to the given ResourceSummary and assigns it to the ResourceSummary field.
+func (o *ResourceInformationStatus) SetResourceSummary(v ResourceSummary) {
+	o.ResourceSummary = &v
+}
+
+func (o ResourceInformationStatus) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if o.Resources != nil {
+		toSerialize["resources"] = o.Resources
+	}
+	if o.ResourceSummary != nil {
+		toSerialize["resourceSummary"] = o.ResourceSummary
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableResourceInformationStatus struct {
+	value *ResourceInformationStatus
+	isSet bool
+}
+
+func (v NullableResourceInformationStatus) Get() *ResourceInformationStatus {
+	return v.value
+}
+
+func (v *NullableResourceInformationStatus) Set(val *ResourceInformationStatus) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableResourceInformationStatus) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableResourceInformationStatus) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableResourceInformationStatus(val *ResourceInformationStatus) *NullableResourceInformationStatus {
+	return &NullableResourceInformationStatus{value: val, isSet: true}
+}
+
+func (v NullableResourceInformationStatus) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableResourceInformationStatus) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
