# v1/model_resource_summary.go
@@ -1,0 +1,153 @@
+/*
+Confluent Manager for Apache Flink / CMF
+
+Apache Flink job lifecycle management component for Confluent Platform.
+
+API version: 1.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package v1
+
+import (
+	"encoding/json"
+)
+
+// ResourceSummary Summary of resource usage
+type ResourceSummary struct {
+	// Total CPU units allocated
+	Cpu *float64 `json:"cpu,omitempty"`
+	// Total memory allocated in bytes
+	Memory *int64 `json:"memory,omitempty"`
+}
+
+// NewResourceSummary instantiates a new ResourceSummary object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewResourceSummary() *ResourceSummary {
+	this := ResourceSummary{}
+	return &this
+}
+
+// NewResourceSummaryWithDefaults instantiates a new ResourceSummary object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewResourceSummaryWithDefaults() *ResourceSummary {
+	this := ResourceSummary{}
+	return &this
+}
+
+// GetCpu returns the Cpu field value if set, zero value otherwise.
+func (o *ResourceSummary) GetCpu() float64 {
+	if o == nil || o.Cpu == nil {
+		var ret float64
+		return ret
+	}
+	return *o.Cpu
+}
+
+// GetCpuOk returns a tuple with the Cpu field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ResourceSummary) GetCpuOk() (*float64, bool) {
+	if o == nil || o.Cpu == nil {
+		return nil, false
+	}
+	return o.Cpu, true
+}
+
+// HasCpu returns a boolean if a field has been set.
+func (o *ResourceSummary) HasCpu() bool {
+	if o != nil && o.Cpu != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetCpu gets a reference to the given float64 and assigns it to the Cpu field.
+func (o *ResourceSummary) SetCpu(v float64) {
+	o.Cpu = &v
+}
+
+// GetMemory returns the Memory field value if set, zero value otherwise.
+func (o *ResourceSummary) GetMemory() int64 {
+	if o == nil || o.Memory == nil {
+		var ret int64
+		return ret
+	}
+	return *o.Memory
+}
+
+// GetMemoryOk returns a tuple with the Memory field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ResourceSummary) GetMemoryOk() (*int64, bool) {
+	if o == nil || o.Memory == nil {
+		return nil, false
+	}
+	return o.Memory, true
+}
+
+// HasMemory returns a boolean if a field has been set.
+func (o *ResourceSummary) HasMemory() bool {
+	if o != nil && o.Memory != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetMemory gets a reference to the given int64 and assigns it to the Memory field.
+func (o *ResourceSummary) SetMemory(v int64) {
+	o.Memory = &v
+}
+
+func (o ResourceSummary) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if o.Cpu != nil {
+		toSerialize["cpu"] = o.Cpu
+	}
+	if o.Memory != nil {
+		toSerialize["memory"] = o.Memory
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableResourceSummary struct {
+	value *ResourceSummary
+	isSet bool
+}
+
+func (v NullableResourceSummary) Get() *ResourceSummary {
+	return v.value
+}
+
+func (v *NullableResourceSummary) Set(val *ResourceSummary) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableResourceSummary) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableResourceSummary) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableResourceSummary(val *ResourceSummary) *NullableResourceSummary {
+	return &NullableResourceSummary{value: val, isSet: true}
+}
+
+func (v NullableResourceSummary) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableResourceSummary) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
