# v1/model_resource_usage_summary.go
@@ -1,0 +1,151 @@
+/*
+Confluent Manager for Apache Flink / CMF
+
+Apache Flink job lifecycle management component for Confluent Platform.
+
+API version: 1.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package v1
+
+import (
+	"encoding/json"
+)
+
+// ResourceUsageSummary Represents a summary of resource usage for the CMF resource
+type ResourceUsageSummary struct {
+	JobManager *JobManager `json:"jobManager,omitempty"`
+	TaskManager *TaskManager `json:"taskManager,omitempty"`
+}
+
+// NewResourceUsageSummary instantiates a new ResourceUsageSummary object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewResourceUsageSummary() *ResourceUsageSummary {
+	this := ResourceUsageSummary{}
+	return &this
+}
+
+// NewResourceUsageSummaryWithDefaults instantiates a new ResourceUsageSummary object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewResourceUsageSummaryWithDefaults() *ResourceUsageSummary {
+	this := ResourceUsageSummary{}
+	return &this
+}
+
+// GetJobManager returns the JobManager field value if set, zero value otherwise.
+func (o *ResourceUsageSummary) GetJobManager() JobManager {
+	if o == nil || o.JobManager == nil {
+		var ret JobManager
+		return ret
+	}
+	return *o.JobManager
+}
+
+// GetJobManagerOk returns a tuple with the JobManager field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ResourceUsageSummary) GetJobManagerOk() (*JobManager, bool) {
+	if o == nil || o.JobManager == nil {
+		return nil, false
+	}
+	return o.JobManager, true
+}
+
+// HasJobManager returns a boolean if a field has been set.
+func (o *ResourceUsageSummary) HasJobManager() bool {
+	if o != nil && o.JobManager != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetJobManager gets a reference to the given JobManager and assigns it to the JobManager field.
+func (o *ResourceUsageSummary) SetJobManager(v JobManager) {
+	o.JobManager = &v
+}
+
+// GetTaskManager returns the TaskManager field value if set, zero value otherwise.
+func (o *ResourceUsageSummary) GetTaskManager() TaskManager {
+	if o == nil || o.TaskManager == nil {
+		var ret TaskManager
+		return ret
+	}
+	return *o.TaskManager
+}
+
+// GetTaskManagerOk returns a tuple with the TaskManager field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ResourceUsageSummary) GetTaskManagerOk() (*TaskManager, bool) {
+	if o == nil || o.TaskManager == nil {
+		return nil, false
+	}
+	return o.TaskManager, true
+}
+
+// HasTaskManager returns a boolean if a field has been set.
+func (o *ResourceUsageSummary) HasTaskManager() bool {
+	if o != nil && o.TaskManager != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetTaskManager gets a reference to the given TaskManager and assigns it to the TaskManager field.
+func (o *ResourceUsageSummary) SetTaskManager(v TaskManager) {
+	o.TaskManager = &v
+}
+
+func (o ResourceUsageSummary) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if o.JobManager != nil {
+		toSerialize["jobManager"] = o.JobManager
+	}
+	if o.TaskManager != nil {
+		toSerialize["taskManager"] = o.TaskManager
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableResourceUsageSummary struct {
+	value *ResourceUsageSummary
+	isSet bool
+}
+
+func (v NullableResourceUsageSummary) Get() *ResourceUsageSummary {
+	return v.value
+}
+
+func (v *NullableResourceUsageSummary) Set(val *ResourceUsageSummary) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableResourceUsageSummary) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableResourceUsageSummary) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableResourceUsageSummary(val *ResourceUsageSummary) *NullableResourceUsageSummary {
+	return &NullableResourceUsageSummary{value: val, isSet: true}
+}
+
+func (v NullableResourceUsageSummary) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableResourceUsageSummary) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
